<resources>
    <string name="app_name">MyMovieList</string>
    <string name="register_button_label">Create account</string>
    <string name="password_placeholder">Password</string>
    <string name="email_placeholder">Email</string>
    <string name="register_form_description">To create account fill form</string>
    <string name="empty_email_label">Empty email</string>
    <string name="empty_password_label">Empty password</string>
    <string name="invalid_email_label">Invalid email address</string>
    <string name="login_button_label">Login</string>
    <string name="login_form_description">To login please fill form</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
