<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppThemeNoTitle"
    android:background="@color/primary"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:padding="15dp"
        android:background="@drawable/rounded_form_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_form_description" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_placeholder"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email_24dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_password_24dp"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_button_label" />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textAlignment="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have account" />
        <TextView
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/registerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register Here" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>